# OOP_22

./: README.md
OOP_exercise/: .gitignore
OOP_exercise/13apr/: CMakeLists.txt  GP.cpp  GP.hpp  Patient.cpp  Patient.hpp  input.txt  main.cpp  out.gp  out.txt
OOP_exercise/18may/: CMakeLists.txt  Constant.cpp  Constant.hpp  Expression.cpp  Expression.hpp  Input.cpp  Input.hpp  Operation.cpp  Operation.hpp  main.cpp
OOP_exercise/19may_group1/: CMakeLists.txt  Exam.cpp  Exam.hpp  MultipleChoiceQuestion.cpp  MultipleChoiceQuestion.hpp  OpenQuestion.cpp  OpenQuestion.hpp  PossibleAnswer.cpp  PossibleAnswer.hpp  Question.cpp  Question.hpp  YesNoQuestion.cpp  YesNoQuestion.hpp  main.cpp  week12.md
OOP_exercise/21may_group4/: CMakeLists.txt  main.cpp  week12.md
OOP_exercise/27apr/: CMakeLists.txt  main.cpp
OOP_exercise/30mar/: CMakeLists.txt  String.cpp  String.hpp  Test.cpp  (+2 more)
OOP_prakticum/: .gitignore
OOP_prakticum/10may_group7/task3/: Assassin.cpp  Assassin.hpp  Barbarian.cpp  Barbarian.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Hero.cpp  Hero.hpp  Sorcerer.cpp  Sorcerer.hpp  Warrior.cpp  Warrior.hpp  Weapon.cpp  Weapon.hpp  main.cpp
OOP_prakticum/18may_group7/task1/: CMakeLists.txt  ChillRoom.cpp  ChillRoom.hpp  ConferenceRoom.cpp  ConferenceRoom.hpp  Office.cpp  Office.hpp  OfficeBuilding.cpp  OfficeBuilding.hpp  Room.cpp  Room.hpp  main.cpp
OOP_prakticum/23may/: CMakeLists.txt  Circle.cpp  Circle.hpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  ShapeCollector.cpp  ShapeCollector.hpp  Triangle.cpp  Triangle.hpp  main.cpp
(+285 files in other folders)
